--- a/two/templates/testRenderTwo.html
+++ b/two/templates/testRenderTwo.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-    This is Two templates directory
+<p>This is Two templates directory</p>
+    <p>and my name is {{ name }}</p>
+    <p>my scores are {{ list }}</p>
 </body>
 </html>
