--- a/templates/render.html
+++ b/templates/render.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>template render </title>
 </head>
 <body>
-    test directory render
+<p>This is Two templates directory</p>
+    <p>and my name is {{ name }}</p>
+{% for foo in list %}
+    <p>my scores are {{ foo }}</p>
+{% endfor %}
+{# django 单行注释#}
+{% comment %}
+多行注释
+多行注释
+多行注释
+{% endcomment %}
 </body>
 </html>
